[gd_scene load_steps=4 format=1]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/player.tex" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 11.1303, 12.3089 )

[node name="player" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 4, 0, 0, 4, 0.58112, 15.0457 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 4.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

transform/scale = Vector2( 4, 4 )
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.58112, 15.0457 )
transform/scale = Vector2( 4, 4 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ground_ray_left" type="RayCast2D" parent="."]

transform/pos = Vector2( -18.4853, 41.3772 )
transform/scale = Vector2( 1, 0.600971 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 7

[node name="head_ray" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, -11.8782 )
transform/rot = 180.0
transform/scale = Vector2( 1, 0.600971 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 4

[node name="ground_ray_right" type="RayCast2D" parent="."]

transform/pos = Vector2( 18.0452, 40.937 )
transform/scale = Vector2( 1, 0.600971 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 7


